--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,16 @@
     "name": "Probably Weather",
     "short_name": "Probably",
     "icons": [
-      {"src": "icon-192.png", "sizes": "192x192", "type": "image/png"},
-      {"src": "icon-512.png", "sizes": "512x512", "type": "image/png"}
+      {
+        "src": "assets/icon-192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "assets/icon-512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      }
     ],
     "start_url": "/",
     "display": "standalone",
